--- a/index.html
+++ b/index.html
@@ -44,5 +44,17 @@
           </div>
         </nav>  
       </header>
+      <!-- 2 -->
+    <!-- JUMBOTRON -->
+    <div class="jumbotron jumbotron-fluid height100p banner" id="home">
+      <div class="container h100">
+        <div class="contentBox h100">
+          <div>
+            <h1 data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000"> "You'll never know until you go!" </h1>
+            <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"> { Your Passport }  </p>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
