--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="">
@@ -56,5 +56,51 @@
         </div>
       </div>
     </div>
+    <!-- 3 -->
+    <!-- Section Explore -->
+    <section class="sec1" id="explore">
+        <div class="container">
+          <div class="row">
+            <div class="offset-sm-2 col-sm-8">
+              <div class="headerText text-center">
+                <h2 data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">Explore Cianjur</h2>
+                <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"> Bumi Cianjur di anugrahi dengan alam yang memanjakan mata di antara nya pegunungan, pantai, air terjun dan masih banyak lagi, di bawah ini ada rekomendasi beberapa tempat yang paling banyak di kunjungi setiap bulannya.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="placeBox" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
+                <div class="imgBx">
+                  <img src="img/img1.png" alt="" class="img-fluid">
+                </div>
+                <div class="content">
+                  <h3>Place Name<br><span>Country Name</span></h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="placeBox" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
+                <div class="imgBx">
+                  <img src="img/img2.png" alt="" class="img-fluid">
+                </div>
+                <div class="content">
+                  <h3>Place Name<br><span>Country Name</span></h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="placeBox" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="1000">
+                <div class="imgBx">
+                  <img src="img/img3.png" alt="" class="img-fluid">
+                </div>
+                <div class="content">
+                  <h3>Place Name<br><span>Country Name</span></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 </body>
 </html>
