--- a/index.html
+++ b/index.html
@@ -102,5 +102,18 @@
           </div>
         </div>
       </section>
+      <!-- 4 -->
+    <!-- Section Advanture -->
+    <section class="sec2" id="adventure">
+        <div class="container h100">
+          <div class="contentBox h100">
+            <div>
+              <h2 data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">Destinasi wisata terpopuler</h2>
+              <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">" You dont need magic to disappear, all you need is a DESTINATION "</p>
+              <a href="#" class="btn btnD1" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="1000">Read More</a>
+            </div>
+          </div>
+        </div>
+      </section>
 </body>
 </html>
