tambah footer dan link js

--- a/index.html
+++ b/index.html
@@ -222,6 +222,42 @@
           </div>
         </div>
       </section>
-
+      <!-- 7 -->
+    <!-- FOOTER -->
+    <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <ul class="sci">
+                <li>
+                  <!-- use fontawesome icon -->
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                </li>
+                <li>
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                </li>
+                <li>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href=""><i class="fa fa-instagram"></i></a>
+                </li>
+              </ul>
+              <p class="cpryt">
+                CopyLeft 20XX(everywhere) AVVENTURA | Template by IFB19-Kel.4
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+  
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/bootstrap.bundle.min.js "></script>
+  <script src="./js/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  
 </body>
 </html>
