--- a/index.html
+++ b/index.html
@@ -263,5 +263,16 @@
   <script>
     AOS.init();
   </script>
+  
+<!-- 9 -->
+  <!-- Scrolled Efek -->
+  <script type="text/javascript">
+    $(document).scroll(function(){
+      $('.navbar').toggleClass('scrolled', $(this).scrollTop() > 
+      $('.navbar').height());
+    });
+  </script>
+</body>
+</html>
 </body>
 </html>
