--- a/index.html
+++ b/index.html
@@ -117,5 +117,74 @@
           </div>
         </div>
       </section>
+    <!-- 5 -->
+    <!-- Section Blog -->
+    <section class="blog" id="blog">
+      <div class="container">
+        <div class="row">
+          <div class="offset-sm-2 col-sm-8">
+            <div class="headerText text-center">
+              <h2 data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">Our Latest Post</h2>
+              <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nulla, ex ipsam minus optio alias repellendus doloremque in error earum.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="blogpost" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
+              <div class="imgBx">
+                <img src="img/img1.png" class="img-fluid" alt="">
+              </div>
+              <div class="content">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illum eaque quas ipsum nam? Consequuntur...</p>
+                <a href="#" class="btn btnD2">Read More</a>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="blogpost" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
+              <div class="imgBx">
+                <img src="img/img2.png" class="img-fluid" alt="">
+              </div>
+              <div class="content">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illum eaque quas ipsum nam? Consequuntur...</p>
+                <a href="#" class="btn btnD2">Read More</a>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="blogpost" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000">
+              <div class="imgBx">
+                <img src="img/img3.png" class="img-fluid" alt="">
+              </div>
+              <div class="content">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illum eaque quas ipsum nam? Consequuntur...</p>
+                <a href="#" class="btn btnD2">Read More</a>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="blogpost" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
+              <div class="imgBx">
+                <img src="img/img4.png" class="img-fluid" alt="">
+              </div>
+              <div class="content">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illum eaque quas ipsum nam? Consequuntur...</p>
+                <a href="#" class="btn btnD2">Read More</a>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 </body>
 </html>
