--- a/index.html
+++ b/index.html
@@ -260,6 +260,10 @@
   <script src="./js/bootstrap.bundle.min.js "></script>
   <script src="./js/jquery-3.5.1.slim.min.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  
+  <!-- 8 -->
+  <!-- Parallax Efek -->
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
