tambah scrolled effect, dan tambah css blog contact footer

--- a/index.html
+++ b/index.html
@@ -265,5 +265,13 @@
   <script>
     AOS.init();
   </script>
+  <!-- 9 -->
+  <!-- Scrolled Efek -->
+  <script type="text/javascript">
+    $(document).scroll(function(){
+      $('.navbar').toggleClass('scrolled', $(this).scrollTop() > 
+      $('.navbar').height());
+    });
+  </script>
 </body>
 </html>
